--- a/Chaoer_ContentCanal/Chaoer_ContentCanal/Info.plist
+++ b/Chaoer_ContentCanal/Chaoer_ContentCanal/Info.plist
@@ -60,6 +60,14 @@
 				<string>zerolife</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>gotoMap</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0.0</string>
